Bug #17494 The algorithm for calculating execution times is not fully correct
Submitted: 16 Feb 2006 21:07 Modified: 8 Apr 2006 7:41
Reporter: Andrey Hristov
Status: Closed
Category:Server: SP Severity:S2 (Serious)
Version:5.1.7 OS:
Assigned to: Andrey Hristov Target Version:

[16 Feb 2006 21:07] Andrey Hristov
Description:
The calculation should be corrected so it should count from STARTS instead of
LAST_EXECUTED_AT

How to repeat:
..
[16 Feb 2006 21:08] Andrey Hristov
When this is fixed close bug #17493
[9 Mar 2006 14:19] Andrey Hristov
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/3636
[23 Mar 2006 20:07] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/4089
[7 Apr 2006 9:10] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/4592
[7 Apr 2006 16:56] Andrey Hristov
Fixed in 5.1.7, now the calculation is fixed. Intermediate server(scheduler) stops and
starts does not affect the activation times.
[8 Apr 2006 7:41] Jon Stephens
Thank you for your bug report. This issue has already been fixed
in the latest released version of that product, which you can download at 
http://www.mysql.com/downloads/

Additional info:

Documented bugfix in 5.1.7 changelog. Closed.