fix for bug #17494 (The algorithm for calculating execution times is not fully correct) This also should fix 17493 and 17346, and probably 16397 (not tested). WL#1034 (Internal CRON) (post-review commit)